--- a/RepData_PeerAssessment2.Rmd
+++ b/RepData_PeerAssessment2.Rmd
@@ -1,6 +1,6 @@
 
 ```{r load_packages}
-required_packages <- c("dplyr", "lubridate")
+required_packages <- c("dplyr", "lubridate", "stringi", "stringdist")
 for (package in required_packages) {
     library(package, character.only = TRUE)
 }
@@ -13,25 +13,44 @@ download.file(original_data_url, original_data_bz2, method = "curl")
 original_data <- read.csv(original_data_bz2, stringsAsFactors = FALSE)
 ```
 
-```{r tidy_select}
-tidy_data <- original_data %>%
-    select(BGN_DATE, EVTYPE, FATALITIES, INJURIES, 
-           PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP)
-```
+```{r tidy_data}
+event_types <- c("Astronomical Low Tide", "Avalanche", "Blizzard",
+    "Coastal Flood", "Cold/Wind Chill", "Debris Flow", "Dense Fog",
+    "Dense Smoke", "Drought", "Dust Devil", "Dust Storm", "Excessive Heat",
+    "Extreme Cold/Wind Chill", "Flash Flood", "Flood", "Frost/Freeze",
+    "Funnel Cloud", "Freezing Fog", "Hail", "Heat", "Heavy Rain", "Heavy Snow",
+    "High Surf", "High Wind", "Hurricane (Typhoon)", "Ice Storm", 
+    "Lake-Effect Snow", "Lakeshore Flood", "Lightning", "Marine Hail",
+    "Marine High Wind", "Marine Strong Wind", "Marine Thunderstorm Wind",
+    "Rip Current", "Seiche", "Sleet", "Storm Surge/Tide", "Strong Wind",
+    "Thunderstorm Wind", "Tornado", "Tropical Depression", "Tropical Storm",
+    "Tsunami", "Volcanic Ash", "Waterspout", "Wildfire", "Winter Storm",
+    "Winter Weather")
 
-```{r tidy_date}
-tidy_data <- tidy_data %>%
-    mutate(date = mdy_hms(BGN_DATE)) %>%
-    select(-BGN_DATE)
-```
+normalize_event_type <- Vectorize(function(event_type) {
+    event_type <- stri_trans_totitle(event_type)
+    distances <- stringdist(event_type, event_types, method = "lv")
+    event_types[which.min(distances)]
+})
 
-```{r tidy_damage}
 numeric_exp <- function(letter) {
     letter[!letter %in% c("K", "M", "B")] <- ""
     sapply(letter, function(l) switch(l, K = 3, M = 6, B = 9, 0))
 }
-tidy_data <- tidy_data %>%
-    mutate(property_damage = PROPDMG * 10 ** numeric_exp(PROPDMGEXP)) %>%
-    mutate(crop_damage = CROPDMG * 10 ** numeric_exp(CROPDMGEXP)) %>%
-    select(-PROPDMG, -PROPDMGEXP, -CROPDMG, -CROPDMGEXP)
+
+tidy_data <- original_data %>%
+    # Select a subset of the columns:
+    select(BGN_DATE, EVTYPE, FATALITIES, INJURIES, 
+           PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP) %>%
+    # Convert BGN_DATE to a vector of class POSIXct:
+    mutate(BGN_DATE = mdy_hms(BGN_DATE)) %>%
+    # Normalize EVTYPE:
+    mutate(EVTYPE = normalize_event_type(EVTYPE)) %>%
+    # Compute the numerical values of PROPDMG and CROPDMG:
+    mutate(PROPDMG = PROPDMG * 10 ** numeric_exp(PROPDMGEXP)) %>%
+    mutate(CROPDMG = CROPDMG * 10 ** numeric_exp(CROPDMGEXP)) %>%
+    select(-PROPDMGEXP, -CROPDMGEXP)
+
+colnames(tidy_data) <- c("date", "event_type", "fatalities", "injuries",
+                         "property_damage", "crop_damage")
 ```
