--- a/RepData_PeerAssessment2.Rmd
+++ b/RepData_PeerAssessment2.Rmd
@@ -57,28 +57,42 @@ colnames(tidy_data) <- c("date", "event_type", "fatalities", "injuries",
                          "property_damage", "crop_damage")
 ```
 
-
 ```{r events}
 ggplot(tidy_data, aes(x = date)) +
     geom_bar(binwidth = as.numeric(duration(1, "year"))) +
-    labs(title = "NOAA Storm Database", 
-         x = "Date", y = "Number of recorded events")
+    labs(title = "NOAA Storm Database", x = "Date", 
+         y = "Number of recorded events")
 ```
 
-```{r population_health}
-population_health <- tidy_data %>%
+```{r population_data}
+population_data <- tidy_data %>%
     group_by(event_type) %>%
     summarize(Fatalities = sum(fatalities), Injuries = sum(injuries)) %>%
     gather(damage_type, damage_count, -event_type) %>%
     group_by(damage_type) %>%
     arrange(desc(damage_count)) %>%
-    filter(row_number() <= 10)
+    filter(row_number() <= 3)
 
-ggplot(population_health, aes(x = event_type, y = damage_count, fill = event_type)) +
+ggplot(population_data, aes(x = event_type, y = damage_count, fill = event_type)) +
     geom_bar(stat = "identity") +
     coord_flip() +
     facet_grid(damage_type ~ .) +
     theme(legend.position = "none") +
     labs(title = "Damages to Population Health",
          x = "Event type", y = "Count")
+```
+
+```{r economy_data}
+economy_data <- tidy_data %>%
+    group_by(event_type) %>%
+    summarize(total_damages = sum(property_damage) + sum(crop_damage)) %>%
+    arrange(desc(total_damages)) %>%
+    filter(row_number() <= 3)
+
+ggplot(economy_data, aes(x = event_type, y = total_damages, fill = event_type)) +
+    geom_bar(stat = "identity") +
+    coord_flip() +
+    theme(legend.position = "none") +
+    labs(title = "Damages to the Economy",
+         x = "Event type", y = "Damages (dollars)")
 ```
