--- a/RepData_PeerAssessment2.Rmd
+++ b/RepData_PeerAssessment2.Rmd
@@ -2,14 +2,19 @@
 ```{r load_packages}
 packages <- c("dplyr", "lubridate", "stringi", "stringdist", "ggplot2", "tidyr")
 for (package in packages) {
-    library(package, character.only = TRUE)
+    library(package, character.only = TRUE, warn.conflicts = FALSE)
 }
 ```
 
 ```{r load_data}
 original_data_url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
 original_data_bz2 <- "StormData.csv.bz2"
-download.file(original_data_url, original_data_bz2, method = "curl")
+if (!file.exists(original_data_bz2)) {
+    download.file(original_data_url, original_data_bz2, method = "curl")
+    download_date <- Sys.time()
+} else {
+    download_date <- file.info(original_data_bz2)[, "ctime"]
+}
 original_data <- read.csv(original_data_bz2, stringsAsFactors = FALSE,
                           nrow = 10000)
 ```
