Data Processing section

--- a/RepData_PeerAssessment2.Rmd
+++ b/RepData_PeerAssessment2.Rmd
@@ -1,3 +1,17 @@
+---
+output: 
+  html_document:
+    keep_md: true
+---
+
+# Damages Caused by Severe Weather Events in the United States
+
+## Data Processing
+
+The analysis was performed using `r R.version.string` together with 
+a group of supporting packages available in
+[The Comprehensive R Archive Network](http://cran.r-project.org/) (CRAN).
+The first step in the analysis is to load all the required packages in R:
 
 ```{r load_packages}
 packages <- c("dplyr", "lubridate", "stringi", "stringdist", "ggplot2", "tidyr")
@@ -5,6 +19,21 @@ for (package in packages) {
     library(package, character.only = TRUE, warn.conflicts = FALSE)
 }
 ```
+
+If some of these packages are not available in your system, they can be 
+installed by running the R command `install.packages(packages)` with the
+`packages` variable defined as in the code fragment above.
+
+The data used in the analysis was obtained from the U.S. National Oceanic and 
+Atmospheric Administration's (NOAA) storm database. It is contained in a
+bzip2-compressed file containing a comma-separated-value (CSV) file,
+which can be downloaded from the following link
+[StormData.csv.bz2](https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2).
+Additional information about how some of the variables were constructed/defined is provided
+in the [Storm Data Preparation](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf)
+and the [Storm Data FAQ](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2FNCDC%20Storm%20Events-FAQ%20Page.pdf) documents.
+
+The storm database can be downloaded and loaded into R as follows:
 
 ```{r load_data}
 original_data_url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
@@ -16,8 +45,41 @@ if (!file.exists(original_data_bz2)) {
     download_date <- file.info(original_data_bz2)[, "ctime"]
 }
 original_data <- read.csv(original_data_bz2, stringsAsFactors = FALSE,
-                          nrow = 10000)
+                          nrow = 1000)
 ```
+
+The data used in this report was downloaded on 
+`r format(download_date, format="%B %d, %Y")` and it contains 
+`r nrow(original_data)` rows and `r ncol(original_data)` columns.
+Further processing was done in order to transform this data into 
+a tidy dataset more suitable for the analysis in question.
+
+This analysis focuses only on a fraction of this original dataset:
+the columns `BGN_DATE`, `EVTYPE`, `FATALITIES`, `INJURIES`, `PROPDMG`, 
+`PROPDMGEXP`, `CROPDMG`, and `CROPDMGEXP`. These columns provide 
+the date when a severe weather events began, the type of event, 
+the number of fatalities, injuries, and information about the costs in 
+property and crop damages. The analysis studies weather events which 
+have had a negative impact on the population health or the economy, 
+therefore events without any reported values on the `FATALITIES`, `INJURIES`, 
+`PROPDMG` and `CROPDMG` columns are discarded.
+
+There is a considerable variability in the way the weather event types 
+are described in the `EVTYPE` column. The  *Storm Data Preparation* 
+manual describes 48 possible event types to be encoded in the database, 
+but the actual database contains `r length(unique(original_data$EVTYPE))` 
+different values. Aiming to provide a more consistent description of 
+the events, the values of the `EVTYPE` column in the original database 
+have been mapped to the 48 possible event types described in the 
+*Storm Data Preparation* manual choosing the closest representation
+according to the Levenshtein edit distance (plus additional processing 
+to handle some conflictive cases).
+
+Finally as part of the data processing, the `BGN_DATE` column is converted 
+to a structure that can be easily handled in R, and the population and crop 
+damages are expressed as single numerical values (combining the mantissa 
+and the exponent). All these steps to transform the data are implemented 
+in the following R code fragment:
 
 ```{r tidy_data}
 event_types <- c("Astronomical Low Tide", "Avalanche", "Blizzard",
@@ -65,10 +127,10 @@ tidy_data <- original_data %>%
     # Filter events with nonzero values in at least one of the columns
     # FATALITIES, INJURIES, PROPDMG or CROPDMG:
     filter(FATALITIES > 0 | INJURIES > 0 | PROPDMG > 0 | CROPDMG > 0) %>%
-    # Convert BGN_DATE to a vector of class POSIXct:
-    mutate(BGN_DATE = mdy_hms(BGN_DATE)) %>%
     # Normalize EVTYPE:
     mutate(EVTYPE = factor(normalize_event_type(EVTYPE))) %>%
+    # Convert BGN_DATE to a vector of class POSIXct:
+    mutate(BGN_DATE = mdy_hms(BGN_DATE)) %>%
     # Compute the numerical values of PROPDMG and CROPDMG:
     mutate(PROPDMG = PROPDMG * 10^numeric_exp(PROPDMGEXP)) %>%
     mutate(CROPDMG = CROPDMG * 10^numeric_exp(CROPDMGEXP)) %>%
@@ -78,12 +140,23 @@ colnames(tidy_data) <- c("date", "event_type", "fatalities", "injuries",
                          "property_damage", "crop_damage")
 ```
 
+The resulting dataset contains `r nrow(tidy_data)` rows and `r ncol(tidy_data)`
+columns. It contains information about events that took place between 
+`r year(min(tidy_data$date))` and `r year(max(tidy_data$date))`. The 
+following histogram summarizes the information in the tidy dataset.
+It evidences that in the earlier years of the database there are
+fewer events recorded, most likely due to a lack of good records.
+
 ```{r events}
 ggplot(tidy_data, aes(x = date)) +
     geom_bar(binwidth = as.numeric(duration(1, "year"))) +
-    labs(title = "NOAA Storm Database", x = "Date", 
-         y = "Number of recorded events")
+    labs(title = "Selected Fraction of the NOAA Storm Database", 
+         x = "Date", y = "Number of recorded events")
 ```
+
+## Results
+
+### Damages to Population Health
 
 ```{r population_data}
 population_data <- tidy_data %>%
@@ -103,6 +176,8 @@ ggplot(population_data, aes(x = reorder(event_type, -damage_count),
     labs(title = "Damages to Population Health", x = NULL, y = "Total")
 ```
 
+### Damages to the Economy
+
 ```{r economy_data}
 economy_data <- tidy_data %>%
     group_by(event_type) %>%
@@ -117,3 +192,5 @@ ggplot(economy_data, aes(x = reorder(event_type, -total_damages),
           axis.text.x = element_text(angle = 45, hjust = 1)) +
     labs(title = "Damages to the Economy", x = NULL, y = "Cost (billion dollars)")
 ```
+
+## Summary
