--- a/RepData_PeerAssessment2.Rmd
+++ b/RepData_PeerAssessment2.Rmd
@@ -49,8 +49,7 @@ if (!file.exists(original_data_bz2)) {
 } else {
     download_date <- file.info(original_data_bz2)[, "ctime"]
 }
-original_data <- read.csv(original_data_bz2, stringsAsFactors = FALSE,
-                          nrow = 1000)
+original_data <- read.csv(original_data_bz2, stringsAsFactors = FALSE)
 ```
 
 The data used in this report was downloaded on 
@@ -189,6 +188,13 @@ ggplot(population_data, aes(x = reorder(event_type, -damage_count),
           axis.text.x = element_text(angle = 45, hjust = 1)) +
     labs(title = "Damages to Population Health", x = NULL, y = "Total")
 ```
+
+As we may see from the plot, the most harmful severe weather event to population 
+health are tornadoes, as they are responsible for the greatest total number of 
+both fatalities and injuries. Heat, flood and lightning are other weather events 
+that cause important damages to population health. It is also interesting to note 
+that there is a considerable difference in the number of injuries caused by 
+tornadoes and the second event by the number of injuries, thunderstorm winds.
 
 ### Damages to the Economy
 
