--- a/RepData_PeerAssessment2.Rmd
+++ b/RepData_PeerAssessment2.Rmd
@@ -6,7 +6,9 @@ output:
 
 # Damages Caused by Severe Weather Events in the United States
 
-The analysis is motivated by the following two questions:
+Severe weather events can cause both public health and economic problems.
+This explores the U.S. National Oceanic and Atmospheric Administration's (NOAA) 
+storm database with the goal of answering the following two questions:
 
 1.  Which types of events are most harmful with respect to population health?
 2.  Which types of events have the greatest economic consequences?
@@ -25,17 +27,14 @@ for (package in packages) {
 }
 ```
 
-If some of these packages are not available in your system, they can be 
-installed by running the R command `install.packages(packages)` with the
-`packages` variable defined as in the code fragment above.
+The data used in the analysis is contained in a bzip2-compressed file 
+containing a comma-separated-value (CSV) file, which can be downloaded 
+from the following link:
 
-The data used in the analysis was obtained from the U.S. National Oceanic and 
-Atmospheric Administration's (NOAA) storm database. It is contained in a
-bzip2-compressed file containing a comma-separated-value (CSV) file,
-which can be downloaded from the following link
-[StormData.csv.bz2](https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2).
-Additional information about how some of the variables were constructed/defined is provided
-in the [Storm Data Preparation](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf)
+https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2
+
+Additional information about some of the variables provided in the 
+[Storm Data Preparation](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf)
 and the [Storm Data FAQ](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2FNCDC%20Storm%20Events-FAQ%20Page.pdf) documents.
 
 The storm database can be downloaded and loaded into R as follows:
@@ -49,14 +48,15 @@ if (!file.exists(original_data_bz2)) {
 } else {
     download_date <- file.info(original_data_bz2)[, "ctime"]
 }
-original_data <- read.csv(original_data_bz2, stringsAsFactors = FALSE)
+original_data <- read.csv(original_data_bz2, stringsAsFactors = FALSE,
+                          nrow = 10000)
 ```
 
 The data used in this report was downloaded on 
 `r format(download_date, format="%B %d, %Y")` and it contains 
 `r nrow(original_data)` rows and `r ncol(original_data)` columns.
 Further processing was done in order to transform this data into 
-a tidy dataset more suitable for the analysis in question.
+a tidy dataset more suitable for this particular analysis.
 
 This analysis focuses only on a fraction of this original dataset:
 the columns `BGN_DATE`, `EVTYPE`, `FATALITIES`, `INJURIES`, `PROPDMG`, 
@@ -76,10 +76,11 @@ different values. Aiming to provide a more consistent description of
 the events, the values of the `EVTYPE` column in the original database 
 have been mapped to the 48 possible event types described in the 
 *Storm Data Preparation* manual choosing the closest representation
-according to the Levenshtein edit distance (plus additional processing 
-to handle some conflictive cases).
+according to the Levenshtein edit distance. It is important to note
+that this procedure may introduce some bias in the data caused by 
+incorrect labels being assigned to the event types.
 
-Finally as part of the data processing, the `BGN_DATE` column is converted 
+Also as part of the data processing, the `BGN_DATE` column is converted 
 to a structure that can be easily handled in R, and the population and crop 
 damages are expressed as single numerical values (combining the mantissa 
 and the exponent). All these steps to transform the data are implemented 
@@ -103,23 +104,16 @@ normalize_event_type <- Vectorize(function(event_type) {
     event_type <- event_type %>%
         # If alternatives are given, take the first one:
         stri_extract_first_regex("^[^/]+") %>%
-        # Trim whitespaces:
-        stri_trim_both() %>%
-        # Handle some conflictive cases:
-        stri_replace_first_fixed("TSTM", "Thunderstorm") %>%
-        stri_replace_first_regex("^COLD$", "Cold/Wind Chill") %>%
-        stri_replace_first_regex("^EXTREME COLD$", "Extreme Cold/Wind Chill") %>%
-        stri_replace_first_regex("^WIND$", "Strong Wind") %>%
-        # Convert to 'Title Case'
+        # Expand some abbreviations:
+        stri_replace_first_fixed("TSTM", "THUNDERSTORM") %>%
+        # Convert to title case:
         stri_trans_totitle()
     distances <- stringdist(event_type, event_types, method = "lv")
     event_types[which.min(distances)]
 })
 
 numeric_exp <- function(letter) {
-    recognized_exp <- c(`1` = 1, `2` = 2, H = 2, h = 2, `3` = 3, 
-        K = 3, k = 3, `4` = 4, `5` = 5, `6` = 6, M = 6, m = 6,
-        `7` = 7, `8` = 8, `9` = 9, B = 9, b = 9)
+    recognized_exp <- c(H = 2, h = 2, K = 3, k = 3, M = 6, m = 6, B = 9, b = 9)
     letter[!letter %in% names(recognized_exp)] <- ""
     sapply(letter, function(l) do.call(switch, c(list(l), recognized_exp, 0)))
 }
@@ -163,7 +157,7 @@ ggplot(tidy_data, aes(x = date)) +
 This section presents the results supporting the answers to the questions
 that motivated the analysis.
 
-### Damages to Population Health
+### Damages to the Population Health
 
 The tidy dataset was analyzed in order to get some insights about which 
 types of events are most harmful with respect to population health.
@@ -186,15 +180,13 @@ ggplot(population_data, aes(x = reorder(event_type, -damage_count),
     facet_wrap(~ damage_type, scales = "free_x") +
     theme(legend.position = "none",
           axis.text.x = element_text(angle = 45, hjust = 1)) +
-    labs(title = "Damages to Population Health", x = NULL, y = "Total")
+    labs(title = "Damages to the Population Health", x = NULL, y = "Total")
 ```
 
-As we may see from the plot, the most harmful severe weather event to population 
-health are tornadoes, as they are responsible for the greatest total number of 
-both fatalities and injuries. Heat, flood and lightning are other weather events 
-that cause important damages to population health. It is also interesting to note 
-that there is a considerable difference in the number of injuries caused by 
-tornadoes and the second event by the number of injuries, thunderstorm winds.
+As we may see from the plot, the most harmful severe weather event to the 
+population health are tornadoes, as they are responsible for the largest number 
+of both fatalities and injuries. Heat, lightning and flood are other weather 
+events that cause important damages to the population.
 
 ### Damages to the Economy
 
@@ -204,14 +196,14 @@ the combined costs in property and crop damages. The following R code fragment
 computes the top-10 event types with the greatest economic consequences
 and generates the figure shown below.
 
-```{r economy_data}
-economy_data <- tidy_data %>%
+```{r economic_data}
+economic_data <- tidy_data %>%
     group_by(event_type) %>%
     summarize(total_damages = sum(property_damage) + sum(crop_damage)) %>%
     arrange(desc(total_damages)) %>%
     filter(row_number() <= 10)
 
-ggplot(economy_data, aes(x = reorder(event_type, -total_damages), 
+ggplot(economic_data, aes(x = reorder(event_type, -total_damages), 
                          y = total_damages / 10^9, fill = event_type)) +
     geom_bar(stat = "identity") +
     theme(legend.position = "none",
@@ -219,4 +211,12 @@ ggplot(economy_data, aes(x = reorder(event_type, -total_damages),
     labs(title = "Damages to the Economy", x = NULL, y = "Cost (billion dollars)")
 ```
 
-## Summary
+The figure evidences that flood causes the greatest economic consequences
+in the U.S., inflicting considerably more property and crop damage than the
+other severe weather events.
+
+## Conclusions
+
+From the results of the analysis, we can conclude that tornadoes and floods 
+are among the severe weather events causing the most important health and 
+economic damages in the U.S.
